--- a/HappyRakshabandhan.html
+++ b/HappyRakshabandhan.html
@@ -15,7 +15,7 @@
     <p>
         Keep your luminous personality shining and your radiant smile activated. Happy Rakshabandhan!
     </p>
-    <a href="./WelcomePage.html">
+    <a href="./index.html">
         <div>
             <p>Back to the Start</p>
             <img class="tran" src="./Arrow.jpg" alt="Arrow" />
